--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,19 @@
 // Mixins in here
+
+
+.bbtn(@bgcolour:orange, @width:100px, @fontcolour:blue){
+    display: block;
+    background-color: @bgcolour;
+    margin: 0 10px 20px;
+    cursor: pointer;
+    width: @width;
+    height: 45px;
+    font-size: 2rem;
+    border-radius: 10px;
+    color:@fontcolour; 
+     
+     &:hover{
+       background-color:@fontcolour;
+       color:@bgcolour;
+     }
+    }
