--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,36 @@
 // Navigation Styles here
+
+
+nav{
+    display:flex;
+    justify-content: space-between;
+    padding-bottom:3%;
+    
+    @media @mobile{
+        .space h1{
+            padding:0 80px;
+        }
+    }
+
+    .space2{
+      padding-top:2%;
+
+      
+    }
+    .space2 a{
+      padding:20px;
+      text-decoration: none;
+      color:black;
+      font-size:1.4rem;
+      
+    }
+
+
+   
+    @media @mobile{
+          flex-direction: column;
+          margin:0 auto;
+    }
+
+    
+}
