--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,21 +1,68 @@
 .home {
 
+ 
+  
+
+   .hi{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    margin:auto;
+    padding-top:3%;
+    padding-bottom:3%;
+   
+
+    .topimg{
+      border-top: 2px dashed @navigation-border;
+      padding-bottom:3%;
+
+      @media @mobile{
+        margin:5%;
+      }
+      
+    }
+
+    @media @mobile{
+      .htext{
+        margin:0 5%;
+      }
+    }
+    
+    
+  }
+
+
+
   .content-section {
     margin: 30px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
+      @media @mobile{
+        flex-direction: column;
+        margin:auto;
+      }
+      
     
     .text-content {
       width: 48%;
       padding-right: 1%;
+
+      @media @mobile{
+        margin:0 auto;
+        width:90%;
+      }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+
+      @media @mobile{
+        margin:0 auto;
+        width:87%;
+      }
 
       img {
         border-radius: 10px;
@@ -27,6 +74,10 @@
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
 
+      @media @mobile{
+        flex-direction: column-reverse;
+        padding-top:5%;
+      }
     .text-content {
       padding-left: 1%;
       padding-right: 0;
@@ -41,7 +92,10 @@
   .content-destination {
     width: 75%;
     margin: 0 auto 30px;
-
+    @media @mobile{
+      padding-top:5%;
+      width:90%;
+    }
     img {
       border-radius: 10px;
     }
@@ -53,9 +107,40 @@
     display: flex;
     justify-content: space-between;
 
+    @media @mobile{
+      flex-direction: column;
+    }
+
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      @media @mobile{
+        width: 75%;
+        margin:0 auto;
+        padding:5% 0;
+      }
+
+     
     }
+
+    .btn{
+      .bbtn(@bgcolour:teal, @width:170px, @fontcolour:white);
+      text-align: center;
+      padding-top:5%;
+
+      @media @mobile{
+        width:100%;
+        margin:0 auto;
+        padding-bottom:5%;
+        padding:10px;
+      }
+
+    }
+
+
   }
+
+
+
 }// home
